--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,29 +1,49 @@
 @import "utilities/variables";
+@import "utilities/mixins";
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px 15%;
+    @include flexMixin(center, space-between, row);
+    padding: 5px 10%;
 
     ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
+        @include flexMixin(center, space-evenly, row);
         color: $grayishBlue;
         font-size: medium;
 
         li {
-            margin: auto 20px;
+            @include flexMixin(center, space-evenly, row);
+            margin: 0 15px;
+            height: 50px;
         }
     }
 
     button {
-        padding: 12px 30px;
-        border: none;
-        border-radius: 20px;
-        color: white;
-        background: rgb(49,211,92);
-background: linear-gradient(90deg, rgba(49,211,92,1) 0%, rgba(43,183,218,1) 100%);
+        @include primaryButton;
+    }
+}
+
+.headerHero {
+    @include flexMixin(center, space-between, row);
+    background-color: $lightGrayishBlue;
+
+    div {
+        @include flexMixin(flex-start, space-between, column);
+        width: 50%;
+        padding: 6% 10%;
+
+        h1 {
+            font-weight: 400;
+        }
+
+        p {
+            font-weight: 300;
+            font-size: 14px;
+            color: $grayishBlue;
+        }
+
+        button {
+            @include primaryButton;
+            margin: 20px 0;
+        }
     }
 }
