--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -32,7 +32,8 @@
         padding: 6% 10%;
 
         h1 {
-            font-weight: 400;
+            font-weight: lighter;
+            font-size: 800;
         }
 
         p {
